--- a/package.json
+++ b/package.json
@@ -27,11 +27,17 @@
   ],
   "dependencies": {
     "@netlify/functions": "^0.10.0",
+    "@pulumi/gcp": "^6.26.0",
+    "@pulumi/pulumi": "^3.34.1",
+    "@react-oauth/google": "^0.2.6",
     "@remix-run/netlify": "^1.4.3",
     "@remix-run/node": "^1.4.3",
     "@remix-run/react": "^1.4.3",
     "@supabase/supabase-js": "^1.31.1",
+    "@types/gapi": "^0.0.42",
     "bcryptjs": "^2.4.3",
+    "google-auth-library": "^8.0.2",
+    "google-one-tap": "^1.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tiny-invariant": "^1.2.0"
@@ -42,6 +48,7 @@
     "@testing-library/cypress": "^8.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.1",
+    "@types/google-one-tap": "^1.2.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "cross-env": "^7.0.3",
