--- a/package.json
+++ b/package.json
@@ -26,29 +26,45 @@
     "/server/build"
   ],
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
     "@netlify/functions": "^0.10.0",
     "@pulumi/gcp": "^6.26.0",
-    "@pulumi/pulumi": "^3.34.1",
+    "@pulumi/github": "^4.12.0",
+    "@pulumi/google-native": "^0.20.0",
+    "@pulumi/pulumi": "^3.35.0",
+    "@pulumi/pulumiservice": "^0.1.3",
     "@react-oauth/google": "^0.2.6",
     "@remix-run/netlify": "^1.4.3",
     "@remix-run/node": "^1.4.3",
     "@remix-run/react": "^1.4.3",
     "@supabase/supabase-js": "^1.31.1",
     "@types/gapi": "^0.0.42",
+    "@types/semver": "^7.3.10",
     "bcryptjs": "^2.4.3",
     "google-auth-library": "^8.0.2",
     "google-one-tap": "^1.0.6",
+    "js-nacl": "^1.4.0",
+    "js-yaml": "^3.14.0",
+    "libsodium": "^0.7.10",
+    "libsodium-wrappers": "^0.7.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tiny-invariant": "^1.2.0"
+    "semver": "^7.3.7",
+    "tiny-invariant": "^1.2.0",
+    "upath": "^2.0.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.4.3",
     "@remix-run/eslint-config": "^1.4.3",
+    "@tailwindcss/forms": "^0.5.2",
     "@testing-library/cypress": "^8.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.1",
     "@types/google-one-tap": "^1.2.0",
+    "@types/js-nacl": "^1.3.0",
+    "@types/js-yaml": "^3.12.5",
+    "@types/libsodium-wrappers": "^0.7.9",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "cross-env": "^7.0.3",
